--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./src/index.js",
-    "dev": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js",
     "test": "mocha --recursive ./test/unit",
     "lint": "eslint ./src ./test --fix"
   },
@@ -25,8 +25,12 @@
   },
   "homepage": "https://github.com/alvarengacarlos/stupid-filesystem-operations#readme",
   "devDependencies": {
-    "chai": "^4.3.6",
-    "eslint": "^8.18.0",
-    "mocha": "^10.0.0"
+    "chai": "~4.3.6",
+    "eslint": "~8.18.0",
+    "mocha": "~10.0.0",
+    "nodemon": "~2.0.18"
+  },
+  "dependencies": {
+    "express": "~4.18.1"
   }
 }
