--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: app
     ports:
       - "3000:3000"
-    command: sh -c "npm install && npm run dev"
+    command: sh -c "npm install && npm run start"
     working_dir: ${ABSOLUTE_PATH_IN_CONTAINER}
     environment:
       - DEBUG=${DEBUG}
